test/libsolidity/syntaxTests/pragma/unknown_pragma.sol
pragma thisdoesntexist;
// ----
// SyntaxError 4936: (0-23): Unknown pragma "thisdoesntexist"
